
allprojects {
	apply plugin: 'java-library'
	apply plugin: 'eclipse'
	sourceCompatibility = '21'
	targetCompatibility = '21'
}

subprojects {
    repositories {
        mavenLocal()
        mavenCentral()

        // JBoss Repo
        maven { url 'https://repository.jboss.org/nexus/content/groups/public-jboss/' }
    }

    dependencies {
        api group: 'org.slf4j', name: 'slf4j-api', version: '1.5.8'
        testImplementation group: 'junit', name: 'junit', version: '4.8.2'
    }

    // Configure tests for Java 21 compatibility with LevelDB
    test {
        maxParallelForks = 1  // Avoid LevelDB file lock conflicts

        // Allow LevelDB to access internal JDK APIs (required for Java 17+)
        jvmArgs = [
            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        ]

        // Pass environment variables to test JVM for MySQL/RabbitMQ config
        environment 'MYSQL_HOST', System.getenv('MYSQL_HOST') ?: 'localhost'
        environment 'MYSQL_PORT', System.getenv('MYSQL_PORT') ?: '3306'
        environment 'MYSQL_USER', System.getenv('MYSQL_USER') ?: 'root'
        environment 'MYSQL_PASSWORD', System.getenv('MYSQL_PASSWORD') ?: 'root'
        environment 'RABBITMQ_HOST', System.getenv('RABBITMQ_HOST') ?: 'localhost'
        environment 'RABBITMQ_USER', System.getenv('RABBITMQ_USER') ?: 'guest'
        environment 'RABBITMQ_PASSWORD', System.getenv('RABBITMQ_PASSWORD') ?: 'guest'

        // Trick Spring 2.5 into recognizing Java 21 by setting java.specification.version
        systemProperty 'java.specification.version', '1.8'
    }
}

project(':iddd_common') {

    dependencies {
		api group: 'commons-logging', name: 'commons-logging', version: '1.1.2'
        api group: 'com.google.code.gson', name: 'gson', version: '2.1'
        api group: 'com.rabbitmq', name: 'amqp-client', version: '5.18.0'
        api group: 'org.hibernate', name: 'hibernate', version: '3.2.7.ga'
        api group: 'org.springframework', name: 'spring-context', version: '3.2.18.RELEASE'
        api group: 'org.springframework', name: 'spring-orm', version: '3.2.18.RELEASE'
        api group: 'org.springframework', name: 'spring-tx', version: '3.2.18.RELEASE'
        api group: 'org.springframework', name: 'spring-aop', version: '3.2.18.RELEASE'
        api group: 'org.iq80.leveldb', name: 'leveldb', version: '0.5'
        api group: 'org.aspectj', name: 'aspectjweaver', version: '1.7.2'
        api group: 'javassist', name: 'javassist', version: '3.8.0.GA'
        api group: 'javax.transaction', name: 'jta', version: '1.1'

        testImplementation group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
        testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
        testImplementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
    }
}

project(':iddd_identityaccess') {
    dependencies {
        implementation project(':iddd_common')
        implementation group: 'org.springframework', name: 'spring-context', version: '3.2.18.RELEASE'
        implementation group: 'org.springframework', name: 'spring-orm', version: '3.2.18.RELEASE'
        implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0-rc1'
        implementation group: 'org.jboss.resteasy', name: 'resteasy-cache-core', version: '2.0.1.GA'

        testImplementation files(this.project(':iddd_common').sourceSets.test.output)
        testImplementation group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
        testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
        testImplementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
        testImplementation group: 'javax.servlet', name: 'servlet-api', version: '2.5'
        testImplementation group: 'org.jboss.resteasy', name: 'tjws', version: '2.0.1.GA'
    }
}

project(':iddd_collaboration') {
    dependencies {
        implementation project(':iddd_common')
        implementation group: 'org.jboss.resteasy', name: 'resteasy-jaxrs', version: '2.0.1.GA'

        testImplementation files(this.project(':iddd_common').sourceSets.test.output)
        testImplementation group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
        testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
        testImplementation group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
    }
}

project(':iddd_agilepm') {
    dependencies {
        implementation project(':iddd_common')

        testImplementation files(this.project(':iddd_common').sourceSets.test.output)
    }
}